# volatile-atomic

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp
